Add UserModel with JSON serialization and update dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,15 @@ dependencies:
   shared_preferences: ^2.3.5
   logger: ^2.5.0
   flex_color_scheme: ^8.1.0
+  json_annotation: ^4.9.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.14
+  json_serializable: ^6.9.2
 
 flutter:
   uses-material-design: true
