--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_starter_kit",
-    "short_name": "flutter_starter_kit",
+    "name": "relief_sphere",
+    "short_name": "relief_sphere",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
