Add Appwrite service and update plugin registrations for Linux, Windows, and macOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flex_color_scheme: ^8.1.0
   json_annotation: ^4.9.0
   equatable: ^2.0.7
+  appwrite: ^13.1.1
 
 dev_dependencies:
   flutter_test:
