--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   json_annotation: ^4.9.0
   equatable: ^2.0.7
   appwrite: ^13.1.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
