--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   equatable: ^2.0.7
   appwrite: ^13.1.1
   uuid: ^4.5.1
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
