--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.example.relief_sphere">
+            <uses-permission android:name="android.permission.INTERNET"/>
+    
     <application
         android:label="relief_sphere"
         android:name="${applicationName}"
