--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   appwrite: ^13.1.1
   uuid: ^4.5.1
   flutter_dotenv: ^5.2.1
+  flutter_svg: ^2.0.17
+  supabase_flutter: ^2.8.3
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
@@ -39,3 +42,5 @@ flutter:
     - assets/images/
     - assets/audio/
     - assets/fonts/
+    - assets/icons/
+    - .env
