--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,13 @@ dependencies:
   flutter_svg: ^2.0.17
   supabase_flutter: ^2.8.3
   flutter_secure_storage: ^9.2.4
+  image_picker: ^1.1.2
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
+  timeline_tile: ^2.0.0
+  google_nav_bar: ^5.0.7
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
