Add permission handler and location utilities; implement user location retrieval; refactor authentication state management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   timeline_tile: ^2.0.0
   google_nav_bar: ^5.0.7
   fl_chart: ^0.70.2
+  dotlottie_loader: ^0.0.4
+  lottie: ^3.3.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -49,4 +52,5 @@ flutter:
     - assets/audio/
     - assets/fonts/
     - assets/icons/
+    - assets/lottie/
     - .env
