--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   dio: ^5.7.0
   provider: ^6.1.2
   go_router: ^14.6.2
-  connectivity_plus: ^6.1.1
+  connectivity_plus: ^5.0.2  # Downgraded version
   shared_preferences: ^2.3.5
   logger: ^2.5.0
   flex_color_scheme: ^8.1.0
@@ -27,8 +27,8 @@ dependencies:
   supabase_flutter: ^2.8.3
   flutter_secure_storage: ^9.2.4
   image_picker: ^1.1.2
-  google_maps_flutter: ^2.10.0
-  geolocator: ^13.0.2
+  google_maps_flutter: ^2.5.0  # Updated version
+  geolocator: ^10.1.0  # Updated version
   geocoding: ^3.0.0
   timeline_tile: ^2.0.0
   google_nav_bar: ^5.0.7
@@ -36,6 +36,11 @@ dependencies:
   dotlottie_loader: ^0.0.4
   lottie: ^3.3.0
   permission_handler: ^11.3.1
+  timeago: ^3.7.0
+  intl: ^0.18.0
+  carousel_slider: ^5.0.0
+  url_launcher: ^6.1.14
+  khalti_checkout_flutter: ^1.0.0-dev.7
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +48,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   json_serializable: ^6.9.2
+
 
 flutter:
   uses-material-design: true
