--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   dio: ^5.7.0
   provider: ^6.1.2
   go_router: ^14.6.2
-  connectivity_plus: ^5.0.2  # Downgraded version
+  connectivity_plus: ^6.1.1
   shared_preferences: ^2.3.5
   logger: ^2.5.0
   flex_color_scheme: ^8.1.0
@@ -27,8 +27,8 @@ dependencies:
   supabase_flutter: ^2.8.3
   flutter_secure_storage: ^9.2.4
   image_picker: ^1.1.2
-  google_maps_flutter: ^2.5.0  # Updated version
-  geolocator: ^10.1.0  # Updated version
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
   geocoding: ^3.0.0
   timeline_tile: ^2.0.0
   google_nav_bar: ^5.0.7
@@ -40,7 +40,7 @@ dependencies:
   intl: ^0.18.0
   carousel_slider: ^5.0.0
   url_launcher: ^6.1.14
-  khalti_checkout_flutter: ^1.0.0-dev.7
+  khalti_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
