--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,13 @@ dependencies:
   intl: ^0.18.0
   carousel_slider: ^5.0.0
   url_launcher: ^6.1.14
-  khalti_flutter: ^3.0.0
+  khalti_checkout_flutter: ^1.0.0-dev.7
+
+dependency_overrides:
+  web: ^0.4.0
+  archive: ^3.3.5 # Add specific version for archive
+  lottie: ^3.3.0 # Pin lottie version
+  geolocator_web: ^3.0.0 # Specify compatible version
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +54,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   json_serializable: ^6.9.2
-
 
 flutter:
   uses-material-design: true
