--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   carousel_slider: ^5.0.0
   url_launcher: ^6.1.14
   khalti_checkout_flutter: ^1.0.0-dev.7
+  firebase_core: ^3.11.0
+  firebase_messaging: ^15.2.2
+  flutter_local_notifications: ^18.0.1
 
 dependency_overrides:
   web: ^0.4.0
