--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,12 +1,10 @@
 plugins {
     id "com.android.application"
-    // START: FlutterFire Configuration
-    id 'com.google.gms.google-services'
-    // END: FlutterFire Configuration
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
@@ -55,7 +53,7 @@ android {
     buildTypes {
         release {
          
-            signingConfig = signingConfigs.release
+            signingConfig = signingConfigs.debug
         }
     }
 
