--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_core: ^3.11.0
   firebase_messaging: ^15.2.2
   flutter_local_notifications: ^18.0.1
+  flutter_stripe: ^10.0.0
+  http: ^1.1.0
 
 dependency_overrides:
   web: ^0.4.0
