Update Android project configuration; migrate to FlutterFragmentActivity, enhance themes, and update dependencies

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,14 +12,12 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
-
 android {
     namespace = "com.example.relief_sphere"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = "27.0.12077973"
 
     compileOptions {
-        // Enable core library desugaring
         coreLibraryDesugaringEnabled true
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
@@ -29,20 +27,13 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
-
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.relief_sphere"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 21 // Ensure minimum SDK is at least 21
+        minSdkVersion 21
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
-
-
-
 
     signingConfigs {
         release {
@@ -52,13 +43,17 @@ android {
             storePassword = keystoreProperties['storePassword']
         }
     }
+
     buildTypes {
         release {
-         
+            signingConfig = signingConfigs.debug
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
             signingConfig = signingConfigs.debug
         }
     }
-
 }
 
 dependencies {
