--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,8 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        // Add multiDex support
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -58,6 +60,8 @@ android {
 
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 
 flutter {
